# advent-of-code-2023

./: CMakeLists.txt
day-1-trebuchet/: CMakeLists.txt  main.cpp
day-2-cube-conundrum/: CMakeLists.txt  main.cpp
day-3-gear-ratios/: CMakeLists.txt  main.cpp
day-4-scratchcards/: CMakeLists.txt  input.txt  main.cpp
shared/: CMakeLists.txt
shared/include/aoc/: app.hpp  utils.hpp
shared/src/: app.cpp  utils.cpp
